--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -6,9 +6,9 @@
     <th>Email</th>
   </tr>
   <tr *ngFor="let employee of data">
-    <td>{{ employee.id }}</td>
+    <td>{{ employee.personalNumber }}</td>
     <td>{{ employee.name }}</td>
-    <td>{{ employee.email }}</td>
+    <td>{{ employee.mail }}</td>
   </tr>
 </table>
 
