--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<employee-list></employee-list>
-<employee-photos></employee-photos>
+<div class="app__container">
+  <div class="app__card">
+    <h2>Employee List</h2>
+    <employee-list></employee-list>
+    <employee-photos></employee-photos>
+    <h2>Project List</h2>
+    <project-list></project-list>
+  </div>
+</div>
