--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,35 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
-.employee-list {
-  &__table {
-    border-collapse: collapse;
+@import "app/ui/employee-list/employee-list.scss";
+@import "app/ui/employee-photos/employee-photos";
+@import "app/ui/project-list/project-list.scss";
+@import "app/app.component.scss";
 
-    & td, th {
-      border: 1px solid black;
-      border-collapse: collapse;
-      width: 200px;
-      padding: 5px;
-
-      &:first-child {
-        width: 50px;
-      }
-    }
-  }
+* {
+  box-sizing: border-box;
 }
 
-.employee-photos {
-  display: flex;
-  flex-direction: row;
-  margin: 10px 0;
-
-  &__item {
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-
-    & img {
-      width: 150px;
-    }
-  }
+body {
+  background-color: aliceblue;
 }
-
