feat: add employee form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
     <employee-photos></employee-photos>
     <h2>Project List</h2>
     <project-list></project-list>
+    <employee-form></employee-form>
   </div>
 </div>
