--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import "app/ui/employee-form/employee-form.scss";
 @import "app/ui/employee-list/employee-list.scss";
 @import "app/ui/employee-photos/employee-photos";
 @import "app/ui/project-list/project-list.scss";
