--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,7 @@
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
     width: 800px;
-    height: 700px;
+    height: auto;
     padding: 10px;
     background-color: #FFF;
   }
