--- a/src/app/ui/employee-form/employee-form.component.html
+++ b/src/app/ui/employee-form/employee-form.component.html
@@ -1,5 +1,5 @@
 <div class="employee-form">
-  <form [formGroup]="employeeForm" class="employee-form__form">
+  <form [formGroup]="employeeForm" class="employee-form__form" (ngSubmit)="onSubmit(employeeForm.value)">
     <input type="text" placeholder="Name" formControlName="name" />
     <input type="number" placeholder="Age" formControlName="age" />
     <input type="number" placeholder="Salary" formControlName="salary" />
