--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,10 +9,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+    margin: 10px;
     width: 800px;
     height: auto;
-    padding: 10px;
-    background-color: #FFF;
+    padding: 20px;
   }
 }
