--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -10,7 +10,9 @@
     <td>{{ employee.name }}</td>
     <td>{{ employee.mail }}</td>
     <td>
-      <button (click)="deleteEmployee(employee.personalNumber)">
+      <button
+        class="btn btn-outline-secondary btn-sm"
+        (click)="deleteEmployee(employee.personalNumber)">
         Delete
       </button>
     </td>
