feat: add homepage

--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -1,3 +1,5 @@
+<h2>Employee List</h2>
+<br />
 <table class="employee-list__table" *ngIf="data$ | async as data; else empty">
   <tr>
     <th>Id</th>
