--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,5 @@
 <div class="app__container">
   <div class="app__card card">
-    <h2>Employee List</h2>
-    <br />
-    <employee-list></employee-list>
-    <br />
-    <h2>Project List</h2>
-    <br />
-    <project-list></project-list>
-    <br />
-    <h2>Add new employee</h2>
-    <employee-form></employee-form>
+    <router-outlet></router-outlet>
   </div>
 </div>
