--- a/src/app/ui/employee-form/employee-form.component.html
+++ b/src/app/ui/employee-form/employee-form.component.html
@@ -1,3 +1,4 @@
+<h2>Add new employee</h2>
 <div class="employee-form">
   <form [formGroup]="employeeForm" class="employee-form__form" (ngSubmit)="onSubmit(employeeForm.value)">
     <input type="text" placeholder="Name" formControlName="name" />
