--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,27 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <span class="navbar-brand mb-0 h1">My App</span>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="employee-list">Employee List</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="create-employee">Form</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <div class="app__container">
   <div class="app__card card">
     <router-outlet></router-outlet>
   </div>
 </div>
+<footer class="app__footer text-center bg-light text-muted">
+  <div class="text-center p-4">
+    My App © 2022 Copyright:
+    <a class="text-reset fw-bold" href="https://github.com/werpietrzak">Wer Pietrzak</a>
+  </div>
+</footer>
