--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -9,7 +9,11 @@
   </tr>
   <tr *ngFor="let employee of data">
     <td>{{ employee.personalNumber }}</td>
-    <td>{{ employee.name }}</td>
+    <td>
+      <a routerLink="/employee-details/{{employee.personalNumber }}/{{ employee.name }}">
+        {{ employee.name }}
+      </a>
+    </td>
     <td>{{ employee.mail }}</td>
     <td>
       <button
