feat: update employee details page

--- a/src/app/ui/employee-details/employee-details.component.html
+++ b/src/app/ui/employee-details/employee-details.component.html
@@ -1,3 +1,3 @@
 <h2>Employee Details</h2>
-<p>Id: {{ (params$ | async)?.id }}</p>
-<p>Name: {{ (params$ | async)?.name }}</p>
+<p>Id: {{ (details$ | async)?.personalNumber }}</p>
+<p>Name: {{ (details$ | async)?.name }}</p>
